Issue #13. String constants